# mandelbrot-gui

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  shell.nix  spiral.sh  sxiv  todo.md
.cargo/: config
daedal/: Cargo.toml
daedal/src/: mandelbrot.rs  options.rs
mandel/: Cargo.toml
nix/: sources.json
src/: events.rs  lib.rs  main.rs  mandelbrot.rs
static/: index.html  package-lock.json
static/public/: daedal.js  daedal.wasm  index.html
