[package]
name = "mndlrs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.5"
image = "0.23.14"
ansi_term = "0.12.1"
#num-complex = "0.4.0"
rocket = "0.5.0-rc.1"

[toolchain]
channel = "nightly"
