[package]
name = "mndlrs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mndlrs"
path = "src/lib.rs"

[dependencies]
image = "0.23.14"
ansi_term = "0.12.1"
#rocket = "0.5.0-rc.1"
structopt = "0.3.23"

[toolchain]
channel = "nightly"
