[package]
name = "daedal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ansi_term = "0.12.1"
structopt = "0.3.23"
egui = "0.15.0"
stdweb = "0.4.2"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["gfx"]

[toolchain]
channel = "nightly"

